[gd_scene load_steps=2 format=3 uid="uid://c2141k8kf2u5u"]

[ext_resource type="Script" path="res://scenes/common/ui/multiplayer_screen.gd" id="1_sstal"]

[node name="MultiplayerScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sstal")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.529453, 0.716312, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = 440.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Enter Name:"

[node name="NameField" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
placeholder_text = "Enter name"

[node name="ConnectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="FindLobbyButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Find Lobby"

[node name="LevelNumberLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Start on Level:"

[node name="LevelNumberBox" type="SpinBox" parent="VBoxContainer"]
visible = false
layout_mode = 2
min_value = 1.0
max_value = 4.0
value = 1.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Start Game"

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return to Main Menu"

[node name="LobbyInfoLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.111111
anchor_right = 0.5
anchor_bottom = 0.111111
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlayerListLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0503472
anchor_top = 0.39892
anchor_right = 0.0503472
anchor_bottom = 0.39892
offset_top = -11.5
offset_right = 61.0
offset_bottom = 11.5
metadata/_edit_use_anchors_ = true

[node name="ConnectedUsersLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.949074
anchor_right = 0.5
anchor_bottom = 0.949074
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="VBoxContainer/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="VBoxContainer/FindLobbyButton" to="." method="_on_find_lobby_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
